[Tests] Update tests for supporting retrieving a Supplier by Id