@@ -4,7 +4,10 @@ plugins {
 
 group 'org.example'
 version '1.0-SNAPSHOT'
-sourceCompatibility = '11'
+
+apply plugin: 'java'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
@@ -24,5 +27,10 @@ dependencies {
 
 test {
     testLogging.showStandardStreams = true
+    outputs.upToDateWhen { false }
     useTestNG()
 }
+
+tasks.withType(JavaCompile).configureEach({
+    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
+})
